embedded/ROS2_WS_TEST/log/build_2024-09-09_15-19-14/sub1/stderr.log
  File "C:\Users\SSAFY\Desktop\ros2_ws\install\sub1\Lib\site-packages\sub1\controller.py", line 137
    self.turtlebot_go()
       ^
SyntaxError: invalid syntax

